--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ highlighter:      rouge
 
 remote_theme : fongandrew/hydeout
 # Setup
-title:            soojung 
+title:            **Deep Learning, Machine Learning을 좋아하는 개발자**
 tagline:          'A Jekyll theme'
-description:      'The <a href="http://hyde.getpoole.com" target="_blank">Hyde</a> theme for <a href="http://jekyllrb.com" target="_blank">Jekyll</a>, refreshed.'
+description:      '개발공부 로그와 삽질의 흔적'
 url:              https://SooDevv.github.io
 baseurl:          ''
                   # the optional subpath of your site, e.g. "/blog"
